# RealtimeNeuralAreaLightInternal

./: .gitattributes  .gitignore  Cargo.toml  README.md  ash.patch  flake.nix  log.txt
assets/area-light/: light-rectangle.glb
blend/: light-rectangle.blend
blend/wet_concrete/: Untitled.blend
data_gen/: Cargo.toml  build.rs
data_gen/shaders/disney-rtnam/: data-gen-1st.slang  data-gen-2nd-material.slang  data-gen-2nd.slang
data_gen/shaders/pbr-simple/: brdf.slang  clipping.slang  data-gen-1st.slang  data-gen-2nd-material.slang  data-gen-2nd.slang  sample-direction.slang
data_gen/shaders/utils/: generate_mipmap.slang
data_gen/src/: data_gen.rs  main.rs  utils.rs  vulkan_state.rs
data_gen/src/data_gen/: disney_rtnam.rs  pbr_simple.rs
data_gen/src/utils/: create_buffer.rs  create_pipeline.rs  create_texture.rs  load_glb_texture.rs
network/: color.json  disney-rtxns.json
network/disney-rtnam/: decoder.json  latent-texture-0.mip0.exr  latent-texture-0.mip1.exr  latent-texture-0.mip10.exr  latent-texture-0.mip2.exr  latent-texture-0.mip3.exr  latent-texture-0.mip4.exr  latent-texture-0.mip5.exr  latent-texture-0.mip6.exr  latent-texture-0.mip7.exr  latent-texture-0.mip8.exr  latent-texture-0.mip9.exr  latent-texture-1.mip0.exr  latent-texture-1.mip1.exr  latent-texture-1.mip10.exr  latent-texture-1.mip2.exr  latent-texture-1.mip3.exr  latent-texture-1.mip4.exr  latent-texture-1.mip5.exr  latent-texture-1.mip6.exr  latent-texture-1.mip7.exr  latent-texture-1.mip8.exr  latent-texture-1.mip9.exr  latent-texture.1.exr  latent-texture.1024.exr  latent-texture.128.exr  latent-texture.16.exr  latent-texture.2.exr  latent-texture.256.exr  latent-texture.32.exr  (+5 more)
nix/: crates.nix  shell.nix
reference/: Cargo.toml
renderer/: Cargo.toml  build.rs
renderer/shaders/: copy_to_swapchain.slang  final.slang  present.slang  scene.slang  shader.slang  tone_mapping.slang
renderer/shaders/scene/: base.slang  color_triangle.slang  damaged_helmet.slang  triangle.slang
renderer/shaders/scene/area_light/: light.slang  mlp.slang  modify-vertices.slang  network.slang
renderer/shaders/scene/disney_rtnam/: analytic.slang  colormap.slang  diff.slang  mlp.slang
renderer/shaders/scene/disney_rtxns/: analytic.slang  diff.slang  mlp.slang
renderer/src/: app.rs  main.rs  renderer.rs
renderer/src/renderer/: gltf_loader.rs  model_data.rs  network.rs  pass.rs  render_images.rs  scene.rs  texture_manager.rs  utils.rs  vertex.rs  vulkan_state.rs
renderer/src/renderer/pass/: copy_to_swapchain_pass.rs  imgui_pass.rs  scene_pass.rs  tone_mapping_pass.rs
renderer/src/renderer/scene/: area_light.rs  color_triangle.rs  damaged_helmet.rs  disney_rtnam.rs  disney_rtxns.rs  triangle.rs
renderer/src/renderer/utils/: create_graphics_pipeline.rs  gltf_loader.rs  load_sphere.rs
train/: .gitignore  Cargo.toml  build.rs  docker-compose.yml  entrypoint.sh  pyproject.toml
train.vk/: Cargo.toml
train.vk/shaders/disney_rtnam/: adam_1st.slang  disney.slang
train.vk/shaders/disney_rtxns/: adam.slang  init.slang
train.vk/shaders/pbr_simple/: adam_2nd.slang  init_2nd.slang  train_1st.slang
train.vk/src/: main.rs  train.rs  utils.rs  vulkan_state.rs
train.vk/src/train/: disney_rtnam.rs  disney_rtxns.rs  pbr_simple.rs
train.vk/src/utils/: load_glb_texture.rs  save_mip_image.rs
train/shaders/disney_rtnam/: adam_1st.slang  adam_2nd.slang  coopvec_utils.slang  disney.slang  init_1st.slang  init_2nd.slang  train_1st.slang  train_2nd.slang
train/shaders/disney_rtxns/: adam.slang  init.slang  train.slang
train/shaders/pbr_simple/: adam_1st.slang  adam_2nd.slang  coopvec_utils.slang  init_1st.slang  train_2nd.slang
train/shaders/utils/: generate_mipmap.slang
train/src/: main.py  main.rs  network.rs  train.rs  utils.rs  vulkan_state.rs
train/src/train/: disney_rtnam.py  disney_rtnam.rs  disney_rtxns.rs  pbr_simple.py  pbr_simple_texture.py
train/src/train/shaders/: pbr_simple.slang
train/src/utils/: create_buffer.rs  create_texture.rs  load_glb_texture.rs  save_mip_image.rs
training/: .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
(+82 files in other folders)
