[workspace]
members = [ "data_gen", "reference","renderer"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[patch.crates-io.ash]
path = "./external/ash/ash"

[patch.crates-io.ash-window]
path = "./external/ash/ash-window"

[patch.crates-io.gpu-allocator]
path = "./external/gpu-allocator"

[patch.crates-io.imgui-rs-vulkan-renderer]
path = "./external/imgui-rs-vulkan-renderer"
