[package]
name = "data_gen"
version.workspace = true
edition.workspace = true

[features]
default = ["validation-enabled"]
validation-enabled = []

[dependencies]
anyhow = "1.0.98"
ash = { path = "../external/ash/ash" }
bytemuck = { version = "1.23.0", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
exr = "1.73.0"
glam = { version = "0.30.3", features = ["bytemuck"] }
gltf = "1.4.1"
gpu-allocator = { path = "../external/gpu-allocator" }
half = { version = "2.6.0", features = ["bytemuck"] }
image = "0.25.6"
rand = "0.9.1"
rand_distr = "0.5.1"
serde_json = "1.0.140"


[build-dependencies]
walkdir = "2.5.0"
