[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[features]
default = ["validation-enabled"]
validation-enabled = []

[dependencies]
anyhow = "1.0.98"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
gpu-allocator = "0.27.0"
winit = "0.30.10"


[build-dependencies]
walkdir = "2.5.0"
