[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[features]
default = ["validation-enabled"]
validation-enabled = []

[dependencies]
anyhow = "1.0.98"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
glam = "0.30.3"
gltf = "1.4.1"
gpu-allocator = "0.27.0"
half = { version = "2.6.0", features = ["bytemuck"] }
imgui = "0.12.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = [
  "dynamic-rendering",
  "gpu-allocator",
] }
imgui-winit-support = "0.13.0"
serde_json = "1.0.140"
winit = "0.30.10"


[build-dependencies]
walkdir = "2.5.0"
