[package]
name = "renderer"
version.workspace = true
edition.workspace = true

[features]
default = ["validation-enabled"]
validation-enabled = []

[dependencies]
anyhow = "1.0.98"
ash = { path = "../external/ash/ash" }
ash-window = { path = "../external/ash/ash-window" }
bytemuck = { version = "1.23.0", features = ["derive"] }
exr = "1.73.0"
glam = { version = "0.30.3", features = ["bytemuck"] }
gltf = "1.4.1"
gpu-allocator = { path = "../external/gpu-allocator" }
half = { version = "2.6.0", features = ["bytemuck"] }
imgui = "0.12.0"
imgui-rs-vulkan-renderer = { path = "../external/imgui-rs-vulkan-renderer", features = [
  "dynamic-rendering",
  "gpu-allocator",
] }
imgui-winit-support = "0.13.0"
serde_json = "1.0.140"
winit = "0.30.10"


[build-dependencies]
walkdir = "2.5.0"
